Handling v2 templates for dotted field feature and stab at using existing methods in switch case
Signed-off-by: Mohit Kumar <mohitamg@amazon.com>